--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,31 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
+        <title>{% block title %}Sortir.com{% endblock %}</title>
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
+        {% block stylesheets %}{% endblock %}
+
+        {% block javascripts %}{% endblock %}
     </head>
     <body>
+    <header>
+        <a href="{{ path('home') }}" title="sortir.com | Home"><img src="{{ asset('img/logo.png') }}">Sortir.com</a>
+
+        <nav>
+            <table>
+                <tr>
+                    <th><a href="{{ path('home') }}">Villes</a></th>
+                    <th><a href="{{ path('home') }}">Campus</a></th>
+                    <th><a href="{{ path('home') }}">Accueil</a></th>
+                    <th><a href="{{ path('home') }}">Mon profil</a></th>
+                    <th><a href="{{ path('home') }}">Se déconnecter</a></th>
+
+                </tr>
+            </table>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
         {% block body %}{% endblock %}
     </body>
 </html>
