--- a/templates/main/modifierUneSortie.html.twig
+++ b/templates/main/modifierUneSortie.html.twig
@@ -6,4 +6,8 @@
 
 <h1>Modifier une sortie</h1>
 
+{{ form_start(updateForm) }}
+    {{ form_widget(updateForm) }}
+{{ form_end(updateForm) }}
+
 {% endblock %}
