block main et affichage form update

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,9 @@
             </table>
         </nav>
     </header>
-    <main></main>
+    <main>
+        {% block main %}{% endblock %}
+    </main>
     <footer></footer>
         {% block body %}{% endblock %}
     </body>
