--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,13 @@
             </table>
         </nav>
     </header>
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="flash flash-{{ label }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
     <main>
         {% block main %}{% endblock %}
     </main>
