--- a/templates/main/modifierUneSortie.html.twig
+++ b/templates/main/modifierUneSortie.html.twig
@@ -6,8 +6,18 @@
 
 <h1>Modifier une sortie</h1>
 
-{{ form_start(updateForm) }}
+
+    {{ form_start(updateForm) }}
     {{ form_widget(updateForm) }}
+    <label>Latitude: </label><input type="text">
+    <br>
+    <label>Longitude: </label><input type="text">
+<br>
+    <button type="submit">Enregister</button>
+    <button type="submit">Publier la sortie</button>
+    <button type="submit">Supprimer la sortie</button>
+    <button><a href="{{ path('home') }}">Annuler</button>
 {{ form_end(updateForm) }}
+
 
 {% endblock %}
