--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>{% block title %}Sortir.com{% endblock %}</title>
 
+        <link rel="stylesheet" href="{{ asset('app.css') }}">
+
         {% block stylesheets %}{% endblock %}
 
         {% block javascripts %}{% endblock %}
