--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
                     <th><a href="{{ path('home') }}">Villes</a></th>
                     <th><a href="{{ path('home') }}">Campus</a></th>
                     <th><a href="{{ path('home') }}">Accueil</a></th>
-                    <th><a href="{{ path('home') }}">Mon profil</a></th>
+                    <th><a href="{{ path('monProfil') }}">Mon profil</a></th>
                     <th><a href="{{ path('home') }}">Se déconnecter</a></th>
 
                 </tr>
