--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
                     <th><a href="{{ path('home') }}">Campus</a></th>
                     <th><a href="{{ path('home') }}">Accueil</a></th>
                     <th><a href="{{ path('monProfil') }}">Mon profil</a></th>
-                    <th><a href="{{ path('home') }}">Se déconnecter</a></th>
+                    <th><a href="{{ path('logout') }}">Se déconnecter</a></th>
 
                 </tr>
             </table>
