--- a/templates/kg_user/login.html.twig
+++ b/templates/kg_user/login.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
     <form method="post">
-        <label for="username">Identifiant :</label>
-        <input type="text" name="_username" id="username">
+        <label for="pseudo">Pseudo :</label>
+        <input type="text" name="_username" id="pseudo">
 
         <label for="password">Mot de passe: </label>
         <input type="password" name="_password" id="password">
