changment etat ok

--- a/templates/olivier/annulerSortie.html.twig
+++ b/templates/olivier/annulerSortie.html.twig
@@ -7,11 +7,15 @@
     <label>Date de la sortie: {{ sorties.dateHeureDebut | date('d/m/Y ') }}</label><br>
     <label>Campus: {{ sorties.campus }}</label><br>
     <label>Lieu: {{ sorties.lieu }}</label><br>
-    <label>Motif: </label><input type="text"><br>
 
+    {{ form_row(updateForm.descriptioninfos) }}
     <br>
-    <button><a href="{{ path('annuler',{'id':sorties.id}) }}">Enregister</a></button>
+    <button type="submit"><a href="{{ path('annuler',{'id':sorties.id}) }}">Enregister</a></button>
+
+
     <button><a href="{{ path('modifier',{'id':sorties.id}) }}">Annuler</a></button>
+
+
 
 
 {% endblock %}
