--- a/templates/kg_user/login.html.twig
+++ b/templates/kg_user/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Login{% endblock %}
 
 {% block body %}
-    <form method="post">
+    <form action="{{ path('login') }}" method="post">
         <label for="pseudo">Pseudo :</label>
         <input type="text" name="_username" id="pseudo">
 
