--- a/templates/kg_user/administrerProfil.html.twig
+++ b/templates/kg_user/administrerProfil.html.twig
@@ -1,15 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mon Profil{% endblock %}
+{% block title %}Administrer Profil{% endblock %}
 
 {% block body %}
 
     <div class="container">
-    <h1>Modifier mon profil</h1>
+    <h1>Modifier un profil</h1>
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button type="submit">Modifier mon profil</button>
+    <button type="submit">Modifier le profil</button>
     {{ form_end(form) }}
     </div>
 
