--- a/templates/kg_user/login.html.twig
+++ b/templates/kg_user/login.html.twig
@@ -11,6 +11,9 @@
         <input type="password" name="_password" id="password">
 
         <button type="submit">Connexion</button>
+
+        <input type="checkbox" id="remember_me" name="_remember_me" checked/>
+        <label for="remember_me">Se souvenir de moi</label>
     </form>
 
 
