--- a/templates/kg_user/login.html.twig
+++ b/templates/kg_user/login.html.twig
@@ -6,13 +6,13 @@
 
 <div class="container">
     <form action="{{ path('login') }}" method="post">
-        <div class="item">
+        <div>
             <label for="pseudo">Pseudo : </label>
-            <input type="text" name="_username" id="pseudo">
+            <input type="text" name="_username" id="pseudo" />
         </div>
-        <div class="item">
+        <div>
             <label for="password">Mot de passe: </label>
-            <input type="password" name="_password" id="password">
+            <input type="password" name="_password" id="password" />
         </div>
 
         <button type="submit">Connexion</button>
