--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,13 +2,31 @@
 
 {% block main %}
     <h2>Date du jour : {{ "now" | date('d/m/Y') }}</h2>
+    <h2>Participant : {{ participant.nom }}</h2>
 
     <table>
+        <tr>
+            <th>Nom de la sortie</th>
+            <th>Date de la sortie</th>
+            <th>Cloture</th>
+            <th>inscrits/places</th>
+            <th>Etat</th>
+            <th>Inscrit</th>
+            <th>Organisateur</th>
+            <th>Actions</th>
+        </tr>
         {# affiche la liste des sorties #}
         {% for sortie in sorties %}
 
                 <tr>
                     <td> {{ sortie.nom }} </td>
+                    <td> {{ sortie.dateHeureDebut | date('d/m/Y')}} </td>
+                    <td> {{ sortie.datelimiteInscription| date('d/m/Y') }} </td>
+                    <td> un nombre à compter / {{ sortie.nbInscriptionsMax }} </td>
+                    <td> {{ sortie.etat.libelle }} </td>
+                    <td> X ? </td>
+                    <td> Bah heu... </td>
+                    <td> Je ferai cela plus tard </td>
                 </tr>
         {%  endfor %}
     </table>
