--- a/templates/olivier/annulerSortie.html.twig
+++ b/templates/olivier/annulerSortie.html.twig
@@ -8,13 +8,13 @@
     <label>Campus: {{ sorties.campus }}</label><br>
     <label>Lieu: {{ sorties.lieu }}</label><br>
 
-    {{ form_row(updateForm.descriptioninfos) }}
-    <br>
-    <button type="submit"><a href="{{ path('annuler',{'id':sorties.id}) }}">Enregister</a></button>
+    {{ form_start(motifForm) }}
+    <button type="submit">Enregister</button>
+    {{ form_end(motifForm) }}
 
-
-    <button><a href="{{ path('modifier',{'id':sorties.id}) }}">Annuler</a></button>
-
+    <form action="{{ path('home') }}">
+        <button>Annuler</button>
+    </form>
 
 
 
