--- a/templates/olivier/modifierUneSortie.html.twig
+++ b/templates/olivier/modifierUneSortie.html.twig
@@ -16,11 +16,19 @@
     <label>Longitude: </label><input type="text"><br>
     <br>
     <button type="submit">Enregister</button>
-    <button><a href="{{ path('publier',{'id':sorties.id}) }}"> Publier la sortie</a></button>
-    <button><a href="{{ path('delete_sortie',{'id':sorties.id})}}">Supprimer la sortie</a></button>
-    <button><a href="{{ path('home') }}">Annuler modification</button>
-    <button><a href="{{ path('raison_annulation',{'id':sorties.id}) }}"> Annuler la sortie</a></button>
-    {{ form_end(updateForm) }}
 
+    {{ form_end(updateForm) }}
+    <form action="{{ path('publier',{'id':sorties.id}) }}">
+        <button>Publier la sortie</button>
+    </form>
+    <form action="{{ path('delete_sortie',{'id':sorties.id})}}">
+        <button>Supprimer la sortie</button>
+    </form>
+    <form action="{{ path('home') }}">
+        <button>Annuler modification</button>
+    </form>
+    <form action="{{ path('raison_annulation',{'id':sorties.id}) }}">
+        <button>Annuler la sortie</button>
+    </form>
 
 {% endblock %}
