--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,12 +1,20 @@
 {%  extends 'base.html.twig' %}
 
+{% block title %} Accueil {% endblock %}
+
 {% block main %}
+
+
+
     <h2>Date du jour : {{ "now" | date('d/m/Y') }}</h2>
     <h2>Participant : {{ app.user.prenom }} {{ app.user.nom | slice(0,1)}}. </h2>
 
+    {{ form_start(Form) }}
+    {{ form_widget(Form) }}
 
     <button name="Rechercher" type="submit" >Rechercher</button>
 
+    {{ form_end(Form) }}
 
     <table>
         <tr>
@@ -21,23 +29,50 @@
         </tr>
         {# affiche la liste des sorties #}
         {% for sortie in sorties %}
-        <tr>
-            <td> {{ sortie.nom }} </td>
-            <td> {{ sortie.dateHeureDebut | date('d/m/Y')}} </td>
-            <td> {{ sortie.datelimiteInscription| date('d/m/Y') }} </td>
-            <td> {{ sortie.participants |length }} / {{ sortie.nbInscriptionsMax }} </td>
-            <td> {{ sortie.etat.libelle }} </td>
-            <td> {% for s in sortie.participants %}
-                    {% if(s.id == app.user.id) %} X {% endif %}
-                 {% endfor %}
-            </td>
-            <td> {{ sortie.organisateur.prenom }} {{ sortie.organisateur.nom }} </td>
-            <td> Je ferai cela plus tard, trop de if </td>
-        </tr>
-        {%  endfor %}
+            <tr>
+                <td> {{ sortie.nom }} </td>
+                <td> {{ sortie.dateHeureDebut | date('d/m/Y')}} </td>
+                <td> {{ sortie.datelimiteInscription| date('d/m/Y') }} </td>
+                <td> {{ sortie.participants |length }} / {{ sortie.nbInscriptionsMax }} </td>
+                <td> {{ sortie.etat.libelle }} </td>
+                <td> {% for s in sortie.participants %}
+                        {% if(s.id == app.user.id) %} X {% endif %}
+                     {% endfor %}
+                </td>
+                <td> {{ sortie.organisateur.prenom }} {{ sortie.organisateur.nom }} </td>
+                <td> {% if sortie.organisateur.id == app.user.id %}
+                        {% if sortie.etat.id == 1 %}
+                            <a href="{{ path('modifier', {'id': sortie.id}) }}">Modifier</a> - <a href="/{{ path('publier', {'id': sortie.id}) }}">Publier</a>
+                        {% elseif sortie.etat.id == 2 %}
+                            <a href="{{ path('sortie', {'id': sortie.id}) }}">Afficher</a> {% if("now" | date('d/m/Y') < sortie.dateHeureDebut | date('d/m/Y')) %} - <a href="{{ path('raison_annulation', {'id': sortie.id}) }}" >Annuler</a>{% endif %}
+                        {% endif %}
+                    {% else %}
+                        {% if sortie.etat.id == 2 %}
+                            <a href="{{ path('sortie', {'id': sortie.id}) }}">Afficher</a>
+                            {% for s in sortie.participants %}
+                                {% if(s.id == app.user.id) %} <a href=""> Se désiter </a>
+                                    {% else %} <a href=""> S'inscrire </a>
+                                {% endif %}
+                            {% endfor %}
+
+                        {% elseif sortie.etat.id == 3 %}
+                            <a href="{{ path('sortie', {'id': sortie.id}) }}">Afficher</a>
+                            {% for s in sortie.participants %}
+                                {% if(s.id == app.user.id) %} <a href=""> Se désister </a> {% endif %}
+                            {% endfor %}
+                        {% elseif sortie.etat.id == 4 %}
+                            <a href="{{ path('sortie', {'id': sortie.id}) }}">Afficher</a>
+                        {% elseif sortie.etat.id == 5 %}
+                            <a href="{{ path('sortie', {'id': sortie.id}) }}">Afficher</a>
+                        {% elseif sortie.etat.id == 6 %}
+                            <a href="{{ path('sortie', {'id': sortie.id}) }}">Afficher</a>
+                        {% endif %}
+                    {% endif %}
+                </td>
+            </tr>
+        {% endfor %}
     </table>
 
     <a href="{{ path('creer_sortie') }}"><button>Créer une sortie</button></a>
 {% endblock %}
 
-{% block title %}Our series | {{ parent() }} {% endblock %}
