--- a/templates/kg_user/monProfil.html.twig
+++ b/templates/kg_user/monProfil.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <section class="row col-xs-offset-1 col-xs-10 col-xs-offset-1">
     <section class="row col-xs-offset-1 col-xs-3">
-        <img src="{{ asset('filename') }}">
+        <img src="img/properties/{{participant.filename}}" max-width="150" height=auto>
     </section>
     <section class="row col-xs-offset-1 col-xs-4">
     <div class="container">
