--- a/templates/kg_user/administrerProfil.html.twig
+++ b/templates/kg_user/administrerProfil.html.twig
@@ -3,14 +3,19 @@
 {% block title %}Administrer Profil{% endblock %}
 
 {% block body %}
-
     <div class="container">
-    <h1>Modifier un profil</h1>
+        <h1>Modifier un profil</h1>
+        <div class="form-group row">
+            <div class="col-sm-2">
+            {{ form_start(form) }}
+            </div>
+            <div class="col-sm-10">
+            {{ form_widget(form) }}
+            </div>
+        </div>
+             <button type="submit">Modifier le profil</button>
+            {{ form_end(form) }}
 
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button type="submit">Modifier le profil</button>
-    {{ form_end(form) }}
     </div>
 
 {% endblock %}
