--- a/templates/kg_user/monProfil.html.twig
+++ b/templates/kg_user/monProfil.html.twig
@@ -3,17 +3,21 @@
 {% block title %}Mon Profil{% endblock %}
 
 {% block body %}
-<section class="row col-xs-offset-1 col-xs-10 col-xs-offset-1">
-    <section class="row col-xs-offset-1 col-xs-3">
-        <img src="img/properties/{{participant.filename}}" max-width="150" height=auto>
-    </section>
-    <section class="row col-xs-offset-1 col-xs-4">
-    <div class="container">
-    <h1>Modifier mon profil</h1>
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button type="submit">Modifier mon profil</button>
-    {{ form_end(form) }}
+<div class="container">
+    <div class="row col-xs-offset-1 col-xs-10 col-xs-offset-1">
+        <h1>Modifier mon profil</h1>
+        <section class="row col-xs-1">
+        <img src="img/properties/{{participant.filename}}" class="img-fluid img-thumbnail">
+         </section>
+
+        <section class="row col-xs-11">
+            <div class="container">
+                {{ form_start(form) }}
+                {{ form_widget(form) }}
+                 <button type="submit">Modifier mon profil</button>
+                {{ form_end(form) }}
+            </div>
+        </section>
     </div>
-</section>
+</div>
 {% endblock %}
