page home terminé

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -29,16 +29,25 @@
         </tr>
         {# affiche la liste des sorties #}
         {% for sortie in sorties %}
+
+            {% if sortie.organisateur.id != app.user.id and sortie.etat.id == 1 or sortie.etat.id == 5 and date()|date('U') - sortie.dateHeureDebut |date('U') >=2592000 %}
+
+            {% else %}
+
+            {% set inscrit = 0 %}
+            {% for s in sortie.participants %}
+                {% if(s.id == app.user.id) %}
+                    {% set inscrit = 1 %}
+                {% endif %}
+            {% endfor %}
+
             <tr>
                 <td> {{ sortie.nom }} </td>
                 <td> {{ sortie.dateHeureDebut | date('d/m/Y')}} </td>
                 <td> {{ sortie.datelimiteInscription| date('d/m/Y') }} </td>
                 <td> {{ sortie.participants |length }} / {{ sortie.nbInscriptionsMax }} </td>
                 <td> {{ sortie.etat.libelle }} </td>
-                <td> {% for s in sortie.participants %}
-                        {% if(s.id == app.user.id) %} X {% endif %}
-                     {% endfor %}
-                </td>
+                <td> {% if(inscrit==1) %} X {% endif %} </td>
 
                 <td> {{ sortie.organisateur.prenom }} {{ sortie.organisateur.nom }} </td>
                 <td> {% if sortie.organisateur.id == app.user.id %}
@@ -50,16 +59,14 @@
                     {% else %}
                         {% if sortie.etat.id == 2 %}
                             <a href="{{ path('sortie', {'id': sortie.id}) }}">Afficher</a>
-                            {% for s in sortie.participants %}
-                                {% if(s.id == app.user.id) %} <a href="{{ path('desistement_sortie', {'idSortie': sortie.id}) }}"> Se désister </a>
+                                {% if(inscrit==1) %}
+                             <a href="{{ path('desistement_sortie', {'idSortie': sortie.id}) }}"> Se désister </a>
                                     {% else %} <a href="{{ path('inscription_sortie', {'idSortie': sortie.id}) }}"> S'inscrire </a>
                                 {% endif %}
-                            {% endfor %}
+
                         {% elseif sortie.etat.id == 3 %}
                             <a href="{{ path('sortie', {'id': sortie.id}) }}">Afficher</a>
-                            {% for s in sortie.participants %}
-                                {% if(s.id == app.user.id) %} <a href=""> Se désister </a> {% endif %}
-                            {% endfor %}
+                                {% if(inscrit==1) %} <a href=""> Se désister </a> {% endif %}
                         {% elseif sortie.etat.id == 4 %}
                             <a href="{{ path('sortie', {'id': sortie.id}) }}">Afficher</a>
                         {% elseif sortie.etat.id == 5 %}
@@ -69,6 +76,7 @@
                     {% endif %}
                 </td>
             </tr>
+            {% endif %}
         {% endfor %}
     </table>
 
