--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
         <title>{% block title %}Sortir.com{% endblock %}</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-        <link rel="stylesheet" href="{{ asset('app.css') }}">
+        <link rel="stylesheet" href="{{ asset('CSS/app.css') }}">
 
         {% block stylesheets %}{% endblock %}
 
