lieux fautes d'orthographe

--- a/templates/emilie/lieux.html.twig
+++ b/templates/emilie/lieux.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Gérer les villes
+    Gérer les lieux
 {% endblock %}
 
 {% block body %}
 
-    <h1>Gérer les leux</h1>
+    <h1>Gérer les lieux</h1>
 
     <h2>Filtrer les lieux</h2>
 
