--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -2,10 +2,14 @@
     <ul>
 
       {%  if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-          <th><a href="{{ path('home') }}">Villes</a></th>
-          <th><a href="{{ path('home') }}">Campus</a></th>
-          <th><a href="{{ path('home') }}">Accueil</a></th>
-          <th><a href="{{ path('monProfil') }}">Mon profil</a></th>
+
+          <li><a href="{{ path('home') }}">Accueil</a></li>
+          <li><a href="{{ path('monProfil') }}">Mon profil</a></li>
+
+          <li><a href="{{ path('home') }}">Villes</a></li>
+          <li><a href="{{ path('home') }}">Campus</a></li>
+
+
             <li><a href="{{ path('logout') }}">Se déconnecter</a> </li>
 
 
