--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -13,9 +13,15 @@
 
 }
 
+
 .tableau {
     width: 520px;
     height: 120px;
+    overflow: auto; /*pour la barre de scroll*/
+}
+.tableau2 {
+    width: 820px;
+    height: 520px;
     overflow: auto; /*pour la barre de scroll*/
 }
 
