--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -2,16 +2,17 @@
     <ul>
 
       {%  if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-          <th><a href="{{ path('home') }}">Villes</a></th>
-          <th><a href="{{ path('home') }}">Campus</a></th>
+
           <th><a href="{{ path('home') }}">Accueil</a></th>
           <th><a href="{{ path('monProfil') }}">Mon profil</a></th>
-            <li><a href="{{ path('logout') }}">Se déconnecter</a> </li>
+        <th><a href="{{ path('logout') }}">Se déconnecter</a> </th>
 
 
         {%  else %}
 
             <li><a href="{{ path('login') }}">Se connecter</a></li>
         {% endif %}
+
     </ul>
+
 </nav>
