--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -6,10 +6,10 @@
           <li><a href="{{ path('home') }}">Accueil</a></li>
           <li><a href="{{ path('monProfil') }}">Mon profil</a></li>
 
-      {# {% if(app.user.roles=='ROLE_ADMIN') %} #}
+      {% if(app.user.admin==1) %}
           <li><a href="{{ path('home') }}">Villes</a></li>
           <li><a href="{{ path('home') }}">Campus</a></li>
-        {# {% endif %} #}
+      {% endif %}
 
             <li><a href="{{ path('logout') }}">Se déconnecter</a> </li>
 
