--- a/templates/olivier/modifierUneSortie.html.twig
+++ b/templates/olivier/modifierUneSortie.html.twig
@@ -10,8 +10,8 @@
     {{ form_widget(updateForm) }}
 
 
-    <label>Rue: {{lieux.rue}}</label><br>
-    <label>Code postal: {{ lieux.noVille.codePostal}}</label><br>
+    <label>Rue: {{sorties.lieu.rue}}</label><br>
+    <label>Code postal: {{ sorties.lieu.noVille.codePostal}}</label><br>
     <label>Latitude: </label><input type="text"><br>
     <label>Longitude: </label><input type="text"><br>
     <br>
